So user can see his dashboard, and dev can reuse navbar and header elements

--- a/RoomService/static/RoomService/style.css
+++ b/RoomService/static/RoomService/style.css
@@ -13,22 +13,33 @@
 
 .customer-login-form {
     background-color: #f6f6f6;
-    width: 100%;
     max-width: 400px;
     padding: 20px;
 }
 
 .staff-login-form {
     background-color: #f6f6f6;
-    width: 100%;
     max-width: 350px;
     padding: 20px;
     margin-left: 10px;
 }
 
+.staff-button {
+    font-size: 24px;
+}
+
 .customer-info {
     background-color: #f6f6f6;
-    width: 100%;
     max-width: 400px;
     padding: 20px;
+}
+
+.services-for-customer {
+    max-width: 450px;
+    padding: 20px;
+    background-color: #e1f6ef;
+}
+
+.request-service-button {
+    margin-left: auto;
 }
