--- a/RoomService/templates/RoomService/customer.html
+++ b/RoomService/templates/RoomService/customer.html
@@ -1,35 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-  {% load static %}
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'RoomService/style.css' %}">
+  {% include 'RoomService/style-import.html' %}
   <title>Room Service | Customer</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'home' %}">Room Service</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">NavItem</a>
-    </div>
-  </div>
-</nav>
+{% include 'RoomService/navbar.html' %}
 
 <div class="container flex-with-wrap mt-5">
   <h1 class="mb-4">Welcome, {{ customer.name }}!</h1>
   <div class="flex-break"></div>
-  <div class="customer-info">
+  <div class="w-100 mt-3 ml-lg-3 customer-info">
     <h2>Your Personal Details</h2>
     <h5>Name: <b>{{ customer.name }}</b></h5>
     <h5>Address: <b>{{ customer.address }}</b></h5>
@@ -38,7 +19,20 @@
     <h5>Email: <b>{{ customer.email }}</b></h5>
   </div>
 
-
+  <div class="w-100 mt-3 ml-lg-3 flex-with-wrap services-for-customer">
+    <h2 class="w-100">Previous Services</h2>
+    {% if services_for_customer %}
+      <ul>
+        {% for service in services_for_customer %}
+          <li>{{ service }}</li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <h6>No services requested yet.</h6>
+    {% endif %}
+    <div class="flex-break"></div>
+    <button class="btn btn-primary request-service-button">Request a Service</button>
+  </div>
 </div>
 </body>
 </html>
