--- a/RoomService/templates/RoomService/index.html
+++ b/RoomService/templates/RoomService/index.html
@@ -1,29 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  {% load static %}
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'RoomService/style.css' %}">
+  {% include 'RoomService/style-import.html' %}
   <title>Room Service</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'home' %}">Room Service</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#">NavItem</a>
-    </div>
-  </div>
-</nav>
+{% include 'RoomService/navbar.html' %}
 
 <div class="container mt-5">
   <div class="text-center">
@@ -33,7 +15,7 @@
   </div>
 
   <div class="flex-with-wrap home-forms">
-    <div class="flex-with-wrap customer-login-form">
+    <div class="w-100 flex-with-wrap customer-login-form">
       <h3>Customer Login</h3>
       <div class="flex-break"></div>
       {% if customer_list %}
@@ -45,9 +27,9 @@
       {% endif %}
     </div>
 
-    <div class="flex-with-wrap staff-login-form">
-      <button class="btn btn-primary btn-block">
-        <h1>Staff Page</h1>
+    <div class="w-100 flex-with-wrap staff-login-form">
+      <button class="btn btn-primary btn-block staff-button">
+        Staff Page
       </button>
     </div>
   </div>
