Customer can request new service

--- a/RoomService/static/RoomService/style.css
+++ b/RoomService/static/RoomService/style.css
@@ -43,3 +43,8 @@
 .request-service-button {
     margin-left: auto;
 }
+
+.service-container {
+    padding: 20px;
+    background-color: #e1f6ef;
+}
