--- a/RoomService/templates/RoomService/index.html
+++ b/RoomService/templates/RoomService/index.html
@@ -21,7 +21,7 @@
       {% if customer_list %}
         <ul>
           {% for customer in customer_list %}
-            <li><a href="{% url 'customer_view' customer.id %}">{{ customer.name }}</a></li>
+            <li><a href="{% url 'customer-dashboard' customer.id %}">{{ customer.name }}</a></li>
           {% endfor %}
         </ul>
       {% endif %}
