Able to request service, improve home page

--- a/RoomService/static/RoomService/style.css
+++ b/RoomService/static/RoomService/style.css
@@ -25,7 +25,10 @@
 }
 
 .staff-button {
+    display: flex;
     font-size: 24px;
+    justify-content: center;
+    align-items: center;
 }
 
 .customer-info {
