--- a/RoomService/templates/RoomService/index.html
+++ b/RoomService/templates/RoomService/index.html
@@ -28,15 +28,10 @@
     </div>
 
     <div class="w-100 flex-with-wrap staff-login-form">
-      <button class="btn btn-primary btn-block staff-button">
+      <a class="btn btn-primary btn-block staff-button" href="/admin">
         Staff Page
-      </button>
+      </a>
     </div>
-  </div>
-
-  <div class="flex-with-break text-center">
-    <h1>Admin</h1>
-    <a href="/admin" class="btn btn-outline-secondary">Go to admin page</a>
   </div>
 </div>
 </body>
