--- a/RoomService/templates/RoomService/navbar.html
+++ b/RoomService/templates/RoomService/navbar.html
@@ -6,7 +6,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#">NavItem</a>
+      <a class="nav-item nav-link" href="{% url 'customer-register' %}">Register</a>
     </div>
   </div>
 </nav>
